--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,19 @@
 *.zip
 *.tar.gz
 *.rar
+.idea
+.idea/*
+**/.idea
+**/.idea/*
+target
+target/*
+**/target
+**/target/*
+HELP.md
+*.iml
+*.cmd
+mvnw
+*.db
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
